[gd_scene load_steps=6 format=2]

[ext_resource path="res://enemies/drone/drone.png" type="Texture" id=1]
[ext_resource path="res://enemies/kdrone/KDrone.gd" type="Script" id=2]
[ext_resource path="res://enemies/projectiles/Orb.tscn" type="PackedScene" id=3]
[ext_resource path="res://enemies/explosion/Explosion.tscn" type="PackedScene" id=4]
[ext_resource path="res://enemies/drone/StateMachine.gd" type="Script" id=5]

[node name="Drone" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2147483649
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}
ExplosionScene = ExtResource( 4 )
hp = 55
OrbScene = ExtResource( 3 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = 1.5708
polygon = PoolVector2Array( 2, -22, 8, -16, 26, -16, 26, 12, 12, 12, 12, 20, -12, 20, -12, 12, -26, 12, -26, -16, -8, -16, -2, -22 )

[node name="WeaponPosition" type="Position2D" parent="."]
position = Vector2( 24, 0 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1.03008, -0.0936453 )
scale = Vector2( 2.18928, 2.73242 )

[node name="Wants" type="Line2D" parent="."]
width = 1.0
default_color = Color( 1, 0, 0, 1 )

[node name="Pointing" type="Line2D" parent="."]
width = 1.0
default_color = Color( 0, 1, 0, 1 )
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
